<package format="2">
  <name>test_stacks_stack1</name>
  <version>0.0.1</version>
  <description>This package provides launch file for operating test_stacks_stack1</description>

  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/</url>


  <maintainer email="jane.doe@example.com">Jane Doe</maintainer>
  <author email="jane.doe@example.com">Jane Doe</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>test_pkg</exec_depend>
  <!--test_depend>roslaunch</test_depend-->

</package>